--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- System color -->
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="button_nav_color">#94B2E6</color>
+    <!-- App color -->
+    <color name="bg_color">#1D3154</color>
+    <color name="white">#ffffff</color>
+    <color name="orange">#DFFF5722</color>
+    <color name="fade">#CABFBB</color>
 
 </resources>
