--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,18 +16,14 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigationView"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:background="?android:attr/windowBackground"
+            android:background="@color/bg_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:itemBackground="@color/cardview_light_background"
-            app:barrierAllowsGoneWidgets="true"
-            app:itemIconTint="@color/design_default_color_primary"
-            app:itemTextColor="@color/design_default_color_on_secondary"
+            app:itemBackground="@color/bg_dark"
+            app:itemIconTint="@color/orange"
+            app:itemTextColor="@color/orange"
             app:menu="@menu/navigation"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
