--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
 
     <!-- App color -->
     <color name="bg_color">#1D3154</color>
+    <color name="nav_bg_color">#673AB7</color>
     <color name="white">#ffffff</color>
-    <color name="orange">#DFFF5722</color>
+    <color name="orange">#FF9800</color>
     <color name="fade">#CABFBB</color>
+    <color name="bg_dark">#1D253E</color>
 
 </resources>
