--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     <style name="Text">
         <item name="android:textColor">@color/orange</item>
         <item name="android:textSize">23sp</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="Divider">
