style current screen

--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        style="@style/Background"
+        android:background="@color/background_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/margin_1"
         tools:context=".fragments.CurrentFragment">
 
     <ImageView
@@ -13,16 +14,14 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_signs"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.103"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/locationAddress"
             app:layout_constraintTop_toTopOf="@+id/locationAddress" />
 
     <TextView
             android:id="@+id/locationAddress"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
+            android:layout_marginTop="@dimen/margin_3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,9 +30,7 @@
     <ImageView
             android:id="@+id/degree"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/margin_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.638"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +40,8 @@
     <TextView
             android:id="@+id/temp"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textColor="@color/orange"
-            android:textSize="75sp"
+            android:textSize="@dimen/text_size_4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/locationAddress"
@@ -55,8 +50,6 @@
     <TextView
             android:id="@+id/summary"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/temp"
@@ -65,21 +58,16 @@
     <TextView
             android:id="@+id/time"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="@dimen/margin_3"
+            android:layout_marginTop="@dimen/margin_3"
             android:text="@string/at_7_30_pm"
-            android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/summary" />
 
     <TextView
             android:id="@+id/lastUpdated"
             style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:layout_marginRight="@dimen/margin_3"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="@string/lastUpdated" />
