--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Background">
-        <item name="android:background">@color/bg_color</item>
-        <item name="android:textColor">@color/orange</item>
-    </style>
-
     <style name="Text">
-        <item name="android:textColor">@color/orange</item>
-        <item name="android:textSize">23sp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/text_1</item>
+        <item name="android:textSize">@dimen/text_size_1</item>
         <item name="android:textStyle">italic</item>
     </style>
 
