--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -40,7 +40,7 @@
     <TextView
             android:id="@+id/temp"
             style="@style/Text"
-            android:textColor="@color/text_1"
+            android:textColor="@color/main_color"
             android:textSize="@dimen/text_size_4"
             app:layout_constraintBottom_toTopOf="@+id/summary"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,16 +82,17 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/time"
-            tools:background="@color/text_1" />
+            tools:background="@color/main_color" />
 
     <ImageView
             android:id="@+id/icon_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/temp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/temp"
-            app:layout_constraintTop_toBottomOf="@+id/locationIcon"
+            app:layout_constraintEnd_toStartOf="@+id/temp"
+            app:layout_constraintHorizontal_bias="0.36"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.382"
             tools:src="@drawable/clear_night" />
 </androidx.constraintlayout.widget.ConstraintLayout>
