--- a/app/src/main/res/values/guideline_color.xml
+++ b/app/src/main/res/values/guideline_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="text_1">@color/white</color>
+    <color name="main_color">@color/white</color>
 
     <color name="white_color">@color/white</color>
     <color name="white_fade">@color/fade</color>
